<resources>
    <string name="app_name">Isochrone map</string>
    <string name="menu_button">menu button</string>
    <string name="search_hint">Search place</string>
    <string name="set_distance">SET TRAVEL DISTANCE IN MINUTES</string>
    <string name="time_0">0</string>
    <string name="time_3h">3h</string>
    <string name="set_transport">SET TRANSPORT</string>
    <string name="content_bike_button">set bike as transport</string>
    <string name="content_walking_button">set walking as transport</string>
    <string name="content_car_button">set car as transport</string>
    <string name="title_activity_maps">Isochrone map</string>
    <string name="set_isochrone_type">SET ISOCHRONE TYPE</string>
    <string name="settings_button">settings_button</string>
    <string name="hexagonal_cover_button_border">hexagonal cover button border</string>
    <string name="convex_hull_button_botder">convex hull button botder</string>
    <string name="hexagonal_cover_button">hexagonal cover button</string>
    <string name="convex_hull_button_border">convex hull button border</string>
    <string name="OSM_contribution">© OpenStreetMap contributors</string>
    <string name="cancel">cancel</string>

    <string name="download_map_message">downloading map…</string>
    <string name="build_isochrone_message">building isochrone…</string>
    <string name="geocoding_message">requesting geocoding results…</string>
    <string name="location_message">requesting location…</string>
    <string name="approximate_location_message">requesting approximate location…</string>

    <string name="download_map_error">failed to download map</string>
    <string name="build_isochrone_error">cannot build isochrone in this area</string>
    <string name="enable_gps_dialog_message">Please enable GPS and try again.</string>
    <string name="enable_gps_dialog_positive_text">Go to settings</string>
    <string name="enable_gps_dialog_negative_text">NO!!!</string>
    <string name="a_gps_disabled_toast">A-GPS is disabled, may take some time to get current location</string>
    <string name="no_search_results_toast">nothing was found</string>
    <string name="search_failed_toast">could not get search results</string>
    <string name="give_permissions_toast">give permissions please :(</string>
    <string name="could_not_get_init_location_toast">cannot get current location :(</string>
    <string name="choose_location_toast">please choose location</string>
</resources>
