<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/additional_settings"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="visible">

    <TextView
        android:id="@+id/set_isochrone_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/set_isochrone_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/convex_hull_button"
        style="@style/ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/convex_hull_button_border"
        app:layout_constraintTop_toBottomOf="@id/set_isochrone_type"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/hexagonal_cover_button"
        app:srcCompat="@drawable/ic_convex_hull_fill_120dp" />

    <ImageButton
        android:id="@+id/hexagonal_cover_button"
        style="@style/ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/hexagonal_cover_button"
        app:layout_constraintTop_toBottomOf="@id/set_isochrone_type"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/convex_hull_button"
        app:srcCompat="@drawable/ic_hexagonal_fill_120dp" />

    <ImageView
        android:id="@+id/convex_hull_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/convex_hull_button"
        app:layout_constraintStart_toStartOf="@id/convex_hull_button"
        app:srcCompat="@drawable/ic_convex_hull_border_120dp"
        tools:layout_editor_absoluteY="2dp"
        android:contentDescription="@string/convex_hull_button_botder" />

    <ImageView
        android:id="@+id/hexagonal_cover_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/hexagonal_cover_button"
        app:layout_constraintStart_toStartOf="@id/hexagonal_cover_button"
        app:srcCompat="@drawable/ic_hexagonal_border_120dp"
        tools:layout_editor_absoluteY="2dp"
        android:contentDescription="@string/hexagonal_cover_button_border" />


</androidx.constraintlayout.widget.ConstraintLayout>