<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_section"
    android:layout_width="match_parent"
    android:layout_height="300dp">

    <androidx.cardview.widget.CardView
        style="@style/CardStyle"
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="3dp"
        app:cardElevation="5dp"
        app:layout_constraintTop_toTopOf="@id/space">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/set_dist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/set_distance"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <SeekBar
                android:id="@+id/seekBar"
                style="@style/ProgressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/set_dist" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:text="@string/time_0"
                app:layout_constraintStart_toStartOf="@id/seekBar"
                app:layout_constraintTop_toBottomOf="@id/seekBar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="12dp"
                android:text="@string/time_3h"
                app:layout_constraintEnd_toEndOf="@id/seekBar"
                app:layout_constraintTop_toBottomOf="@id/seekBar" />

            <TextView
                android:id="@+id/set_transport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/set_transport"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/seekBar" />

            <ImageButton
                android:id="@+id/bike_button"
                style="@style/ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/content_bike_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/set_transport"
                app:srcCompat="@drawable/ic_directions_bike_black_100dp"
                android:onClick="TransportButton"/>

            <ImageButton
                android:id="@+id/walking_button"
                style="@style/ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/content_walking_button"
                app:layout_constraintEnd_toStartOf="@+id/bike_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/bike_button"
                app:srcCompat="@drawable/ic_directions_walk_black_100dp"
                android:onClick="TransportButton"/>

            <ImageButton
                android:id="@+id/car_button"
                style="@style/ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/bike_button"
                app:layout_constraintTop_toTopOf="@+id/bike_button"
                app:srcCompat="@drawable/ic_directions_car_black_100dp"
                android:contentDescription="@string/content_car_button"
                android:onClick="TransportButton"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        style="@style/CardStyle"
        android:id="@+id/menu_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="3dp"
        app:cardElevation="5dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <SearchView
                android:id="@+id/search_field"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:iconifiedByDefault="false" />

            <ImageButton
                android:id="@+id/menu_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/menu_button"
                android:onClick="toggleMenu"
                android:tint="@color/colorDarkGrey"
                app:srcCompat="@drawable/ic_menu_black_24dp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        app:layout_constraintBottom_toBottomOf="@id/menu_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>