<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings_layout"
    android:layout_width="match_parent"
    android:layout_height="260dp">

    <Space
        android:id="@+id/space_for_settings"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        app:layout_constraintBottom_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        style="@style/CardStyle"
        android:id="@+id/settings_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="3dp"
        app:cardElevation="5dp"
        app:layout_constraintTop_toTopOf="@id/space_for_settings">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/set_dist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/set_distance"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.warkiz.widget.IndicatorSeekBar
                android:id="@+id/seekBar"
                style="@style/ProgressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                app:isb_seek_smoothly="false"
                app:isb_ticks_count="10"
                app:isb_show_tick_marks_type="square"
                app:isb_show_tick_texts="true"
                app:isb_show_indicator="none"
                app:isb_tick_marks_size="4dp"
                app:layout_constraintTop_toBottomOf="@id/set_dist" />

            <TextView
                android:id="@+id/set_transport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/set_transport"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/seekBar" />

            <ImageButton
                android:id="@+id/bike_button"
                style="@style/ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/content_bike_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/set_transport"
                app:srcCompat="@drawable/ic_directions_bike_black_100dp"
                android:onClick="TransportButton"/>

            <ImageButton
                android:id="@+id/walking_button"
                style="@style/ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/content_walking_button"
                app:layout_constraintEnd_toStartOf="@+id/bike_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/bike_button"
                app:srcCompat="@drawable/ic_directions_walk_black_100dp"
                android:onClick="TransportButton"/>

            <ImageButton
                android:id="@+id/car_button"
                style="@style/ImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/bike_button"
                app:layout_constraintTop_toTopOf="@+id/bike_button"
                app:srcCompat="@drawable/ic_directions_car_black_100dp"
                android:contentDescription="@string/content_car_button"
                android:onClick="TransportButton"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>